fixed menu overlap

--- a/assets/styles/scss/_content-blocks.scss
+++ b/assets/styles/scss/_content-blocks.scss
@@ -975,7 +975,7 @@ img.board-cert {
 	margin-right: 48px;
 	display: flex;
 	gap: 16px;
-	z-index: 10;
+	z-index: 1;
 	button {
 		cursor: pointer;
 		border-radius: 2px;
